resolved the issue of placeholder text was not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -401,10 +401,10 @@ img {
 .form-item textarea {
   padding: 8px;
   padding-left: 30px;
-  background: transparent;
   border: solid 1px var(--customers-icons-color);
   border-radius: 4px;
   width: 448px;
+  color: var(--secondarytextcolor);
 }
 
 .form-item svg {
